--- a/Quiz03_explanations.ipynb
+++ b/Quiz03_explanations.ipynb
@@ -26,30 +26,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "a120a862",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello David\n",
+      "Hello again\n"
+     ]
     }
    ],
    "source": [
-    "def sum_double_numbers(start, end, step=2):\n",
-    "    r=0\n",
-    "    for i in range(start, end, step):\n",
-    "        r += i*2\n",
-    "        #print(i, r) # to show steps\n",
-    "    return r\n",
-    "\n",
-    "sum_double_numbers(2, 9, 3)"
+    "print(\"Hello David\")\n",
+    "print(\"Hello again\")\n",
+    "print(\"Another thing\")"
    ]
   },
   {
@@ -427,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
