Added a new file

--- a/Quiz03_explanations.ipynb
+++ b/Quiz03_explanations.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "print(\"Hello David\")\n",
     "print(\"Hello again\")\n",
-    "print(\"Another thing\")"
+    "print(\"Another thing\")\n",
+    "print(\"This is a demo\")"
    ]
   },
   {
